--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,12 +46,16 @@
     <Analyzer Include="D:\Learning\Dev\Unity\Unity Editor\2023.2.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Interface\IController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatBoxer\CatBoxerScripts.cs" />
     <Compile Include="Assets\Scripts\ResourcesScripts\Resource.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CharacterManager.cs" />
+    <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatBoxer\CatBoxerController.cs" />
+    <Compile Include="Assets\Scripts\Controller\CharacterController.cs" />
+    <Compile Include="Assets\Scripts\Model\CharacterModel.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatFolotilo\CatFoloAttack.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
@@ -65,15 +69,18 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_FrameRateCounter.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Enemy\HealthBarScripts.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatBrex\CatBrexAttack.cs" />
+    <Compile Include="Assets\Scripts\Interface\IHealth.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatFolotilo\CatFoloProperties.cs" />
     <Compile Include="Assets\Scripts\UICharacterController.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatVampire\CatVampireFindEnemyToAttack.cs" />
+    <Compile Include="Assets\Scripts\Character and enemies scripts\Character\AnimationStates.cs" />
     <Compile Include="Assets\Scripts\MenuController.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatFolotilo\CatFoloFindEnemyToAttack.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\Actions.cs" />
     <Compile Include="Assets\Scripts\ResourcesScripts\ResourceName.cs" />
     <Compile Include="Assets\Scripts\TowerScripts\UpdateScript.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
@@ -95,7 +102,9 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatHammer\CatHammerProperties.cs" />
+    <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatBoxer\CatBoxerView.cs" />
     <Compile Include="Assets\Scripts\UIShopController.cs" />
+    <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatBoxer\CatBoxerModel.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatVampire\CatVampireProperties.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Enemy\HitBoxE.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatHammer\CatHammerFindEnemyToAttack.cs" />
@@ -106,6 +115,7 @@
     <Compile Include="Assets\Scripts\EventScripts\UIManageScriptInGamePlay.cs" />
     <Compile Include="Assets\Scripts\Spawn Scripts\Spawn.cs" />
     <Compile Include="Assets\DetailsHeroManagement.cs" />
+    <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CharacterEvent.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\FindEnemyFixed.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatVampire\CatVampireScripts.cs" />
@@ -119,6 +129,7 @@
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CharHealth.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
     <Compile Include="Assets\Scripts\EventScripts\OnHoverBtnMainmenu.cs" />
+    <Compile Include="Assets\PlayerManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\Scripts\EventScripts\GuidePage.cs" />
     <Compile Include="Assets\Scripts\EventScripts\SetFrameTarget.cs" />
@@ -135,6 +146,7 @@
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CatBoxer\CatBoxerFindEnemyToAttack.cs" />
     <Compile Include="Assets\Scripts\TowerScripts\TowerScripts.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Enemy\EnemyScripts.cs" />
+    <Compile Include="Assets\Scripts\View\CharacterView.cs" />
     <Compile Include="Assets\Scripts\ResourcesScripts\ResourcesGenerator.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Character\CharacterScritps.cs" />
     <Compile Include="Assets\Scripts\Character and enemies scripts\Pet\PetSkill.cs" />
