--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,7 +46,6 @@
     <Analyzer Include="D:\Learning\Dev\Unity\Unity Editor\2023.2.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Character\Hero\CharacterEvent.cs" />
     <Compile Include="Assets\Scripts\Interface\IView.cs" />
     <Compile Include="Assets\Scripts\Interface\IController.cs" />
     <Compile Include="Assets\Scripts\Pattern\Factory\CharacterFactory.cs" />
@@ -58,6 +57,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatBoxer\CatBoxerModel.cs" />
     <Compile Include="Assets\Scripts\Controller\CharacterController.cs" />
+    <Compile Include="Assets\Scripts\Interface\IEffect.cs" />
     <Compile Include="Assets\Scripts\Model\CharacterModel.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
@@ -74,17 +74,16 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_DigitValidator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_FrameRateCounter.cs" />
     <Compile Include="Assets\Scripts\Character\Pet\PetManager.cs" />
-    <Compile Include="Assets\Scripts\Character\Hero\Skill.cs" />
     <Compile Include="Assets\Scripts\Interface\IHealth.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatBoxer\CatBoxerAttack.cs" />
     <Compile Include="Assets\Scripts\Pattern\Singleton\Singleton.cs" />
+    <Compile Include="Assets\Scripts\Interface\ISkill.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
     <Compile Include="Assets\Scripts\UICharacterController.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatFolotilo\CatFoloAttack.cs" />
     <Compile Include="Assets\Scripts\MenuController.cs" />
-    <Compile Include="Assets\Scripts\Character\Hero\CharHealth.cs" />
     <Compile Include="Assets\Scripts\EnumClass.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
@@ -93,13 +92,14 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatHammer\HitBox.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatMurad\CatMuradAttack.cs" />
-    <Compile Include="Assets\Scripts\Character\Hero\Character.cs" />
     <Compile Include="Assets\Scripts\Character\Pet\PetSkill.cs" />
     <Compile Include="Assets\Scripts\EventScripts\MenuSettingInGamePlay.cs" />
-    <Compile Include="Assets\Scripts\Character\Hero\CharacterManager.cs" />
     <Compile Include="Assets\Scripts\UI\LetterBoxer.cs" />
+    <Compile Include="Assets\Scripts\Character\CharHealth.cs" />
+    <Compile Include="Assets\Scripts\Skill\BaseSkill.cs" />
     <Compile Include="Assets\Scripts\Tower\UpdateScript.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatMurad\CatMuradProperties.cs" />
+    <Compile Include="Assets\Scripts\Character\CharacterManager.cs" />
     <Compile Include="Assets\Scripts\EventScripts\ShowTooltipsSkill.cs" />
     <Compile Include="Assets\Scripts\Character\Enemy\HitBoxE.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatFolotilo\CatFoloScripts.cs" />
@@ -110,7 +110,9 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatVampire\CatVampireFindEnemyToAttack.cs" />
     <Compile Include="Assets\Scripts\Character\Enemy\EnemyHealth.cs" />
+    <Compile Include="Assets\Scripts\Character\CharacterEffect.cs" />
     <Compile Include="Assets\Scripts\Manager\UIManager.cs" />
+    <Compile Include="Assets\Scripts\Character\Character.cs" />
     <Compile Include="Assets\Scripts\Character\Pet\Pet.cs" />
     <Compile Include="Assets\Scripts\UIShopController.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatHammer\CatHammerProperties.cs" />
@@ -124,21 +126,24 @@
     <Compile Include="Assets\Scripts\Character\Hero\CatBoxer\CatBoxerScripts.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatMurad\CatMuradFindEnemyToAttack.cs" />
+    <Compile Include="Assets\Scripts\Character\AnimationStates.cs" />
+    <Compile Include="Assets\Scripts\Character\FindEnemyFixed.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextConsoleSimulator.cs" />
+    <Compile Include="Assets\Scripts\Interface\ICharacterEffect.cs" />
     <Compile Include="Assets\Scripts\Model\BaseModel.cs" />
     <Compile Include="Assets\Scripts\Spawn\Spawn.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TeleType.cs" />
-    <Compile Include="Assets\Scripts\Character\Hero\AnimationStates.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
-    <Compile Include="Assets\Scripts\Character\Hero\CharacterEffect.cs" />
+    <Compile Include="Assets\Scripts\Skill\SkillData.cs" />
     <Compile Include="Assets\Scripts\Interface\IEvent.cs" />
     <Compile Include="Assets\Scripts\Tower\TowerScripts.cs" />
     <Compile Include="Assets\Scripts\Pattern\Factory\BaseFactory.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
     <Compile Include="Assets\Scripts\EventScripts\OnHoverBtnMainmenu.cs" />
     <Compile Include="Assets\PlayerManager.cs" />
+    <Compile Include="Assets\Scripts\Character\CharacterEvent.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatMurad\CatMuradScripts.cs" />
     <Compile Include="Assets\Scripts\EventScripts\GuidePage.cs" />
@@ -154,10 +159,10 @@
     <Compile Include="Assets\Scripts\Character\Hero\CatBoxer\CatBoxerController.cs" />
     <Compile Include="Assets\Scripts\Character\Hero\CatFolotilo\CatFoloFindEnemyToAttack.cs" />
     <Compile Include="Assets\Scripts\View\CharacterView.cs" />
+    <Compile Include="Assets\Scripts\Skill\Skill.cs" />
     <Compile Include="Assets\Scripts\ResourcesScripts\ResourcesGenerator.cs" />
     <Compile Include="Assets\Scripts\ResourcesScripts\ResourcesManage.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
-    <Compile Include="Assets\Scripts\Character\Hero\FindEnemyFixed.cs" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Roboto-Bold - License.txt" />
